feat: add PII encryption schema migration for students table
- Create new migration to modify `students` table for PII encryption
- Change `national_id` and `passport_number` columns to `TEXT` type
- Add blind index columns `national_id_index` and `passport_number_index`
- Implement encryption casting and blind indexing logic in Student model
- Add comprehensive test suite for PII encryption functionality
- Include search scopes for querying encrypted fields
- Add configuration for blind index key stability
- Update documentation with implementation details and review notes

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -42,7 +42,7 @@ story_location: /media/truc2tz/SantaSSD/SKS/Sources/repos/PHP/blood-group-studen
 development_status:
   epic-1: in-progress
   1-1-install-configure-breeze-blade: done
-  1-2-pii-encryption-schema-migration: backlog
+  1-2-pii-encryption-schema-migration: done
   1-3-web-based-otp-integration: backlog
   epic-1-retrospective: optional
 
