feat(auth): add web-based OTP integration for registration
- Implement OTP service with generation and verification logic
- Update registration flow to require OTP verification before login
- Add login interception for unverified users
- Create OTP verification controller and views
- Add comprehensive test coverage for OTP functionality
- Include rate limiting and security measures (3 attempts max, 10-15 min expiry)
- Modify OtpService verify method to accept purpose parameter
- Add purpose filtering to OTP verification query
- Include dev notes for architecture compliance and implementation details

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -43,7 +43,7 @@ development_status:
   epic-1: in-progress
   1-1-install-configure-breeze-blade: done
   1-2-pii-encryption-schema-migration: done
-  1-3-web-based-otp-integration: backlog
+  1-3-web-based-otp-integration: done
   epic-1-retrospective: optional
 
   epic-2: backlog
