feat: add dashboard application initialization story
- Add new story file for dashboard and application initialization
- Include senior developer review notes with auto-fixed issues
- Document acceptance criteria, tasks, and implementation details
- Add database migration for nullable student fields
- Update UX elements, security checks, and test quality improvements

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -46,8 +46,8 @@ development_status:
   1-3-web-based-otp-integration: done
   epic-1-retrospective: optional
 
-  epic-2: backlog
-  2-1-dashboard-application-initialization: backlog
+  epic-2: in-progress
+  2-1-dashboard-application-initialization: done
   2-2-personal-parent-info-forms: backlog
   2-3-program-selection-logic: backlog
   2-4-document-upload-component-storage: backlog
