--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -48,7 +48,7 @@ development_status:
 
   epic-2: in-progress
   2-1-dashboard-application-initialization: done
-  2-2-personal-parent-info-forms: backlog
+  2-2-personal-parent-info-forms: done
   2-3-program-selection-logic: backlog
   2-4-document-upload-component-storage: backlog
   epic-2-retrospective: optional
