feat(application): implement program selection step
Add program selection functionality allowing applicants to choose their desired program during the application process. This implements Story 2.3 with support for both draft and complete application workflows.

**Changes:**
- Add nullable program_id migration for draft application support
- Create Program model with Applicant relationship
- Implement ApplicationService::updateProgram() method
- Add ProgramSelectionRequest with conditional validation
- Create reusable select.blade.php UI component
- Build program selection form view with dynamic program dropdown
- Update parent info flow to redirect to program selection on "Next"
- Add comprehensive feature and unit tests

**Why:**
Enables applicants to select their target program while maintaining flexible draft state validation, following the established service-layer architecture pattern.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -49,7 +49,7 @@ development_status:
   epic-2: in-progress
   2-1-dashboard-application-initialization: done
   2-2-personal-parent-info-forms: done
-  2-3-program-selection-logic: backlog
+  2-3-program-selection-logic: done
   2-4-document-upload-component-storage: backlog
   epic-2-retrospective: optional
 
