--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -50,7 +50,7 @@ development_status:
   2-1-dashboard-application-initialization: done
   2-2-personal-parent-info-forms: done
   2-3-program-selection-logic: done
-  2-4-document-upload-component-storage: backlog
+  2-4-document-upload-component-storage: done
   epic-2-retrospective: optional
 
   epic-3: backlog
