--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -55,7 +55,7 @@ development_status:
 
   epic-3: in-progress
   3-1-m-pesa-stk-push-integration-web: done
-  3-2-manual-payment-fallback: review
+  3-2-manual-payment-fallback: done
   3-3-final-submission-logic: backlog
   3-4-payment-callback-handling: backlog
   epic-3-retrospective: optional
