feat(payments): implement M-Pesa callback handling with security
Add secure payment callback processing that decouples payment verification from application submission:

**Backend Changes:**
- Refactor MpesaService::processCallback to only update Payment records (status, receipt number, amount)
- Remove auto-submission logic - payments now stay in 'draft' until manual submit per Story 3.3
- Clear manual_submission flag when STK callback confirms payment
- Add validation for missing MpesaReceiptNumber in success callbacks

**Security Enhancements:**
- Move IP whitelist configuration from middleware to config/mpesa.php
- Redact PII (phone numbers) from PaymentController logs
- Add comprehensive callback validation and idempotency handling

**Testing:**
- Add PaymentCallbackTest covering success/failure scenarios, duplicate callbacks, IP blocking, and edge cases

This separates payment verification from application workflow, ensuring users must explicitly submit applications after successful payment.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -57,11 +57,11 @@ development_status:
   3-1-m-pesa-stk-push-integration-web: done
   3-2-manual-payment-fallback: done
   3-3-final-submission-logic: review
-  3-4-payment-callback-handling: backlog
+  3-4-payment-callback-handling: done
   epic-3-retrospective: optional
 
-  epic-4: backlog
-  4-1-asp-api-authentication-sanctum: backlog
+  epic-4: in-progress
+  4-1-asp-api-authentication-sanctum: done
   4-2-pending-applications-endpoint: backlog
   4-3-status-update-endpoint: backlog
   4-4-sync-resilience-logging: backlog
