feat: implement ASP status update endpoint with notifications
Add POST /api/v1/sync/status endpoint to receive application status updates from external ASP system. Implements complete flow for status synchronization including validation, persistence, history tracking, and email notifications.

**Changes:**
- Create UpdateApplicationStatusRequest for validating status updates (application_id, status enum)
- Extend ApplicationService with updateStatus() method handling state transitions
- Add AspSyncController::updateStatus() with API logging integration
- Implement event-driven notification system (ApplicationStatusChanged event, SendStatusChangeEmail listener)
- Create ApplicationStatusUpdated mailable with Blade template
- Add comprehensive feature tests covering authentication, validation, success cases, and email delivery
- Record status changes in status_histories table for audit trail

**Why:**
Enables bidirectional integration with external admission system by allowing status updates (approved/rejected/request_info) to be pushed to the portal, ensuring students receive timely notifications and maintaining complete audit history.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -63,6 +63,6 @@ development_status:
   epic-4: in-progress
   4-1-asp-api-authentication-sanctum: done
   4-2-pending-applications-endpoint: done
-  4-3-status-update-endpoint: backlog
+  4-3-status-update-endpoint: done
   4-4-sync-resilience-logging: backlog
   epic-4-retrospective: optional
