feat(sync): implement comprehensive logging middleware and status history tracking
- Add LogApiRequests middleware to capture all API request/response details including timing, status codes, and optional payload/response bodies
- Create api_logs table migration with IP tracking, duration metrics, and JSON storage for debugging
- Implement automatic status history tracking via ApplicationService for all application state transitions
- Add PII masking utility to prevent sensitive data exposure in logs
- Refactor AspSyncController to remove ad-hoc logging in favor of centralized middleware approach
- Add comprehensive feature tests for sync logging, error scenarios, and status history creation
- Ensure transaction-safe status history writes and consistent error handling across all sync endpoints

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -64,5 +64,5 @@ development_status:
   4-1-asp-api-authentication-sanctum: done
   4-2-pending-applications-endpoint: done
   4-3-status-update-endpoint: done
-  4-4-sync-resilience-logging: backlog
+  4-4-sync-resilience-logging: done
   epic-4-retrospective: optional
