chore(epic-5): add admin & student portal features to sprint backlog
Updated sprint status and planning artifacts to include Epic 5, which introduces the "Missing Link" for manual payment verification and post-admission student portal features.

Changes:
- Added Epic 5 stories (5-1 through 5-4) to sprint backlog in sprint-status.yaml
- Documented new functional requirements FR22-FR24 covering payment verification, student dashboard, and grades/schedule viewing
- Added Epic 5 detailed story breakdowns with acceptance criteria for admin payment panel, student dashboard transformation, student information service mock strategy, and grades/schedule view
- Updated generation timestamp to 2026-01-22

This epic bridges the manual payment approval workflow gap and extends the portal beyond admission to support enrolled student services.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -1,4 +1,4 @@
-# generated: 2026-01-20
+# generated: 2026-01-22
 # project: blood-group-student-port
 # project_key: blood-group-student-port
 # tracking_system: file-system
@@ -33,7 +33,7 @@
 # - SM typically creates next story after previous one is 'done' to incorporate learnings
 # - Dev moves story to 'review', then runs code-review (fresh context, different LLM recommended)
 
-generated: 2026-01-20
+generated: 2026-01-22
 project: blood-group-student-port
 project_key: blood-group-student-port
 tracking_system: file-system
@@ -66,3 +66,10 @@ development_status:
   4-3-status-update-endpoint: done
   4-4-sync-resilience-logging: done
   epic-4-retrospective: optional
+
+  epic-5: backlog
+  5-1-admin-payment-verification-panel: backlog
+  5-2-student-dashboard-transformation: backlog
+  5-3-student-information-service-mock-strategy: backlog
+  5-4-view-grades-schedule: backlog
+  epic-5-retrospective: optional
