feat(admin): add payment verification panel for manual payments
Implement admin interface for verifying manual payment receipts with approve/reject functionality. This allows finance admins to review pending payments, view proof documents, and take action to move applications forward.

**Changes:**
- Add AdminPaymentController with index, show, approve, and reject methods
- Create admin payment views (index and show) for listing and reviewing payments
- Implement approve action: updates payment to 'completed' status
- Implement reject action: updates payment to 'failed', reverts application to 'draft', sends notification email
- Add feature tests covering admin payment verification workflows
- Generate implementation artifacts and definition of done documentation

**Scope:**
Route: /admin/payments (auth protected)
Lists payments with 'pending_verification' status
Displays student name, application ID, transaction code, amount, and proof image
Enables finance team to verify manual payments before ASP sync

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -67,8 +67,8 @@ development_status:
   4-4-sync-resilience-logging: done
   epic-4-retrospective: optional
 
-  epic-5: backlog
-  5-1-admin-payment-verification-panel: backlog
+  epic-5: in-progress
+  5-1-admin-payment-verification-panel: done
   5-2-student-dashboard-transformation: backlog
   5-3-student-information-service-mock-strategy: backlog
   5-4-view-grades-schedule: backlog
