fix: resolve N+1 queries, logic flaws, and routing issues in student dashboard
- Fix critical dashboard access logic to prioritize student_code over application status
- Add eager loading to DashboardController to prevent N+1 query issues
- Define missing student dashboard routes (/student/grades, /schedule, /fees)
- Update feature tests to reflect corrected authorization logic
- Document fixes in implementation artifact for Story 5.2

Addresses code review findings: logic flaw in student status check, missing route definitions, and database query optimization through eager loading.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -69,7 +69,7 @@ development_status:
 
   epic-5: in-progress
   5-1-admin-payment-verification-panel: done
-  5-2-student-dashboard-transformation: backlog
-  5-3-student-information-service-mock-strategy: backlog
+  5-2-student-dashboard-transformation: done
+  5-3-student-information-service-mock-strategy: ready-for-dev
   5-4-view-grades-schedule: backlog
   epic-5-retrospective: optional
