feat(student): implement mock student information service with strategy pattern
**What changed:**
- Created StudentInformationServiceInterface with getGrades, getSchedule, and getFees methods
- Implemented MockStudentInformationService with sample data including invoice history
- Added dynamic service binding in AppServiceProvider based on config driver
- Added STUDENT_INFO_DRIVER configuration to .env.example and services.php
- Created comprehensive unit tests for mock service and service binding
- Fixed ApiAuthenticationTest regression due to config key mismatch

**Why:**
Enables UI development with mock student data while maintaining flexibility to swap to real ASP API integration later. Implements strategy pattern for clean separation of concerns and testability.

**Review updates:**
- Added invoice_history to mock service (AC #2 compliance)
- Hardened tests to verify data types and non-empty arrays
- All acceptance criteria validated and passing

--- a/student-admission-portal/.env.example
+++ b/student-admission-portal/.env.example
@@ -74,6 +74,10 @@ ASP_API_KEY=your-production-api-key
 ASP_API_SECRET=your-production-hmac-secret
 ASP_TIMEOUT=30
 
+# Student Info Driver (mock, asp)
+STUDENT_INFO_DRIVER=mock
+
+
 # --------------------------------------------------------------------------
 # M-Pesa Payment Gateway
 # --------------------------------------------------------------------------
