--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -70,6 +70,6 @@ development_status:
   epic-5: in-progress
   5-1-admin-payment-verification-panel: done
   5-2-student-dashboard-transformation: done
-  5-3-student-information-service-mock-strategy: ready-for-dev
+  5-3-student-information-service-mock-strategy: done
   5-4-view-grades-schedule: backlog
   epic-5-retrospective: optional
