feat(student): implement grades, schedule, and fees views
Implemented student portal pages to display academic information:
- Refactored StudentController to inject StudentInformationServiceInterface
- Added grades(), schedule(), and fees() methods with service integration
- Created Blade views (grades.blade.php, schedule.blade.php, fees.blade.php)
- Applied TailwindCSS v4 styling with x-app-layout components
- Added comprehensive feature tests via StudentPortalTest.php
- Verified 200 OK responses and data visibility for authenticated students
- Fallback to 'STU001' for missing student codes (mock behavior)

Enables students to view their academic grades, class schedules, and fee information through a clean, responsive interface.

--- a/_bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/_bmad-output/implementation-artifacts/sprint-status.yaml
@@ -71,5 +71,5 @@ development_status:
   5-1-admin-payment-verification-panel: done
   5-2-student-dashboard-transformation: done
   5-3-student-information-service-mock-strategy: done
-  5-4-view-grades-schedule: backlog
+  5-4-view-grades-schedule: done
   epic-5-retrospective: optional
